# sae

./: .gitignore  DOWNLOAD_STATUS.md  README.md  pyproject.toml
configs/: instruct.yaml  pair_llama8b_llama1b_pilot.yaml  pair_llama8b_qwen0p6b.yaml  pair_llama8b_qwen0p6b_pilot.yaml
docs/: DESIGN_NARRATIVE.md  INTERFACE_SPEC.md  SUBJECT_SAES.md
report/: design_report.html  onset_study.html
report/diag/: kn_probe_high_school_microeconomics.json  necessity_econ.json  necessity_math.json  necessity_med.json  onset_ablate_econ_L1.json  onset_ablate_econ_L18.json  onset_ablate_feature_econ_L1.json  onset_ablate_feature_econ_L1_sinkctrl.json  onset_split_econ.json  onset_split_math.json  onset_split_med.json  perneuron_econ_L1.json  perneuron_math_L0.json  perneuron_med_L4.json  sae_ablate_econ.json  (+19 more)
scripts/: 01_capture.py  02_train_sae.py  03_build_concepts.py  04_score.py  05_match.py  06_distill.py  agg_subjectB.py  build_pilot_battery.py  build_safety_heldout.py  cross_layer_routing.py  diag_backproj_commonmode.py  diag_sae_ood.py  distill_allfeat.py  distill_pathway.py  distill_precompute.py  eval_safety.py  eval_selectivity.py  eval_steering.py  eval_task_accuracy.py  exp_general_fvu_alllayers.py  exp_subject_sae.py  exp_subject_sae_full.py  gen_ablate_demo.py  knowledge_neuron_probe.py  make_mmlu_econ_split.py  make_mmlu_split.py  necessity_sweep.py  onset_ablate.py  onset_ablate_feature.py  onset_ablate_perneuron.py  onset_attention.py  onset_locate.py  onset_locate_split.py  onset_relocate_normed.py  route_eval_selectivity.py  route_extract.py  run_all.sh  run_all_layer.py  run_all_layer_analysis.py  run_analysis.py  (+18 more)
tests/: smoke_test.py
(+12 files in other folders)
